--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Radiologia Dental</title>
+  <title>Radiología Dental</title>
   <meta name="description" content="">
   <meta name="author" content="">
   
@@ -25,10 +25,13 @@
 </head>
 <body>
 
+<div class="col-md-1">
+</div>
 
+<div class="col-md-10">
 
 <!-- Navigation ==========================================-->
-<nav id="menu" class="navbar navbar-default navbar-fixed-top">
+<nav id="menu" class="navbar navbar-default">
   <div class="container"> 
     <!-- Menu group -->
     <div class="navbar-header">
@@ -52,18 +55,14 @@
 
 <!-- Header =================================================-->
 <header class="text-center" name="home">
-  <div class="intro-text">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-2 col-md-8">
+        <img src="img/header-bg.jpg" class="img-responsive">        
+      </div>      
+    </div>   
   </div>
 </header>
-
-
-<!-- Book Section ===========================================-->
-<div id="book-section">
-  <div class="container">
-      <h1>Radiología Dental</h1>
-  </div>
-</div>
-
 
 <!-- About Section ===========================================-->
 <div id="about-section">
@@ -133,7 +132,6 @@
 </div>
 
 
-
 <!-- footer Section ================================================================-->
 <div id="footer" class="text-center">
   <div class="container">
@@ -161,6 +159,12 @@
       </div>    
     </div>
   </div>
+</div>
+
+  
+</div>
+
+<div class="col-md-1">
 </div>
 
 
