--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
       <div class="row">
         <div class="col-md-4">
           <p>Horarios de Atención:</p>
-          <p>Lunes a Viernes: 8:30 a 13:00 hs - 15:30 a 19:00hs</p>
+          <p>Lunes a Viernes: 8:30 a 13:00 hs - 15:30 a 19:30hs</p>
           <p>Sábados: 9:00 a 13:00hs</p>
         </div>      
         <div class="col-md-4">
-          <p>Envie su consulta via e-mail a:</p><h3><i class="fa fa-envelope"></i>info@radiologiadental.com</h3>
+          <p>Envie su consulta via e-mail a:</p><h3><i class="fa fa-envelope"></i>info@radiologiadental.com.ar</h3>
         </div>
         <div class="col-md-4">
-          <p>o comuniquese telefonicamente al:</p><h3><i class="fa fa-whatsapp"></i>(+54)11-5645-1678</h3>
+          <p>o comuniquese telefonicamente al:</p><h3><i class="fa fa-whatsapp"></i>(+54)11-5461-8264</h3>
         </div>
       </div>     
     </div>   
