--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   
   <!-- Bootstrap================================================ -->
   <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -36,7 +37,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span></button>
-        <a class="navbar-brand" href="index.html">Radiología Dental</a>
+        <a class="navbar-brand" href="index.html"><img src="img/logo-h.jpg" style="width: 200px;"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
@@ -51,10 +52,10 @@
 
   <!-- Header =================================================-->
   <header class="text-center" name="home">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-          <img src="img/header-bg.jpg" class="img-responsive">        
+        <div class="col-md-12">
+          <img src="img/bg.jpg" style="width: 100%">        
         </div>      
       </div>   
     </div>
@@ -66,7 +67,7 @@
       <div class="row">
         <div class="col-md-12">
           <h4>Acerca de nosotros</h4>
-          <p>Este emprendimiento es creado por Trinidad Amaya y Eliana Pellejero, dos técnicas superiores en salud con especialidad en radiología, matriculadas, habiendo realizado el curso de radiología odontológica en el instituto Fadei.<br><br>Nuestra intención es principalmente que la Ciudad de Marcos Paz cuente con un consultorio radiológico dental, para trabajar a la par de los Odontólogos sea de manera particular como así también el lograr ser prestadoras de las obras sociales interesados en que sus afiliados no tengan la necesidad de salir de la ciudad, para tener que realizarse dicho estudio.<br><br>El consultorio cuenta con un equipo de tecnología digital avanzada totalmente nuevo, llamado sistema Panorámico, radiografía extraoral, teniendo como beneficio la reducción de la espera para la obtención de las imágenes en tan solo 10 seg. brindando así más tiempo a la atención de los pacientes, donde el mismo se lleva su placa impresa en cuestión de minutos.<br><br> Este equipo logra obtener imágenes de alta calidad, dado a su tiempo de exposición mínima, reduce las sombras de la columna vertebral y produce imágenes claras, nítidas, contrastadas, con un alto nivel de detalles en cuestión de segundos. Mejora el posicionamiento para reducir las repeticiones de tomas y hace más eficiente el flujo de trabajo. Por otra parte, tenemos un sistema de impresión de laser seca que proporciona una calidad excepcional de imagen.</p>
+          <p>Este emprendimiento es creado por dos técnicas superiores en salud con especialidad en radiología, matriculadas, habiendo realizado el curso de radiología odontológica en el instituto Fadei.<br><br>Nuestra intención es principalmente que la Ciudad de Marcos Paz cuente con un consultorio radiológico dental, para trabajar a la par de los Odontólogos sea de manera particular como así también el lograr ser prestadoras de las obras sociales interesados en que sus afiliados no tengan la necesidad de salir de la ciudad, para tener que realizarse dicho estudio.<br><br>El consultorio cuenta con un equipo de tecnología digital avanzada totalmente nuevo, llamado sistema Panorámico, radiografía extraoral, teniendo como beneficio la reducción de la espera para la obtención de las imágenes en tan solo 10 seg. brindando así más tiempo a la atención de los pacientes, donde el mismo se lleva su placa impresa en cuestión de minutos.<br><br> Este equipo logra obtener imágenes de alta calidad, dado a su tiempo de exposición mínima, reduce las sombras de la columna vertebral y produce imágenes claras, nítidas, contrastadas, con un alto nivel de detalles en cuestión de segundos. Mejora el posicionamiento para reducir las repeticiones de tomas y hace más eficiente el flujo de trabajo. Por otra parte, tenemos un sistema de impresión de laser seca que proporciona una calidad excepcional de imagen.</p>
         </div>
       </div>
     </div>
@@ -113,15 +114,17 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-4">
-          <p>Horarios de Atención:</p>
+          <h5>Horarios de Atención:</h5>
           <p>Lunes a Viernes: 8:30 a 13:00 hs - 15:30 a 19:30hs</p>
           <p>Sábados: 9:00 a 13:00hs</p>
         </div>      
         <div class="col-md-4">
-          <p>Envie su consulta via e-mail a:</p><h3><i class="fa fa-envelope"></i>info@radiologiadental.com.ar</h3>
+          <br>
+          <p>Envie su consulta via e-mail a:</p><h3><i class="fa fa-envelope"></i> info@radiologiadental.com.ar</h3>
         </div>
         <div class="col-md-4">
-          <p>o comuniquese telefonicamente al:</p><h3><i class="fa fa-whatsapp"></i>(+54)11-5461-8264</h3>
+          <br>
+          <p>o comuniquese a nuestro WhatsApp:</p><h3><i class="fa fa-whatsapp"></i> (+54)11-5461-8264</h3>
         </div>
       </div>     
     </div>   
@@ -135,9 +138,9 @@
         <div class="container">
           <div id="iconos" class="social">
             <ul>
-              <li><a href="https://www.facebook.com/oeste.dev.7"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/Oeste_DEV"><i class="fa fa-twitter"></i></a></li>
-              <li><a href=""><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/radiologia.dental.9"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.instagram.com/rdx_radiologiadental/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
@@ -149,14 +152,19 @@
           <p>
             &copy; radiologiadental - Todos los derechos reservados
           </p>
-          <div class="credits">
-          <p>Desarrollado por <a href="http://www.oestedev.com"><img src="img/logo.png" height="15" width="70"></a></p>
-          </div>
         </div>    
       </div>
     </div>
   </div>
-
+  <div id="footer2" class="text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+            <p>Desarrollado por <a href="http://www.oestedev.com"><img src="img/logo.png" height="15" width="70"></a></p>
+        </div>    
+      </div>
+    </div>
+  </div>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
