--- a/index.html
+++ b/index.html
@@ -67,12 +67,33 @@
       <div class="row">
         <div class="col-md-12">
           <h4>Acerca de nosotros</h4>
-          <p>Este emprendimiento es creado por dos técnicas superiores en salud con especialidad en radiología, matriculadas, habiendo realizado el curso de radiología odontológica en el instituto Fadei.<br><br>Nuestra intención es principalmente que la Ciudad de Marcos Paz cuente con un consultorio radiológico dental, para trabajar a la par de los Odontólogos sea de manera particular como así también el lograr ser prestadoras de las obras sociales interesados en que sus afiliados no tengan la necesidad de salir de la ciudad, para tener que realizarse dicho estudio.<br><br>El consultorio cuenta con un equipo de tecnología digital avanzada totalmente nuevo, llamado sistema Panorámico, radiografía extraoral, teniendo como beneficio la reducción de la espera para la obtención de las imágenes en tan solo 10 seg. brindando así más tiempo a la atención de los pacientes, donde el mismo se lleva su placa impresa en cuestión de minutos.<br><br> Este equipo logra obtener imágenes de alta calidad, dado a su tiempo de exposición mínima, reduce las sombras de la columna vertebral y produce imágenes claras, nítidas, contrastadas, con un alto nivel de detalles en cuestión de segundos. Mejora el posicionamiento para reducir las repeticiones de tomas y hace más eficiente el flujo de trabajo. Por otra parte, tenemos un sistema de impresión de laser seca que proporciona una calidad excepcional de imagen.</p>
+          <p>Consultorio atendido por Técnicas Superiores en salud especialidad en Radiología, matriculadas, con curso de Radiología Odontológica.<br><br>Nuestra intención es principalmente que la Ciudad de Marcos Paz cuente con un consultorio radiológico dental, para trabajar a la par de los Odontólogos sea de manera particular como así también el lograr ser prestadoras de las obras sociales interesados en que sus afiliados no tengan la necesidad de salir de la ciudad, para tener que realizarse dicho estudio.<br><br>El consultorio cuenta con un equipo de tecnología digital avanzada totalmente nuevo, llamado sistema Panorámico, radiografía extraoral, teniendo como beneficio la reducción de la espera para la obtención de las imágenes en tan solo 10 seg. brindando así más tiempo a la atención de los pacientes, donde el mismo se lleva su placa impresa en cuestión de minutos.<br><br> Este equipo logra obtener imágenes de alta calidad, dado a su tiempo de exposición mínima, reduce las sombras de la columna vertebral y produce imágenes claras, nítidas, contrastadas, con un alto nivel de detalles en cuestión de segundos. Mejora el posicionamiento para reducir las repeticiones de tomas y hace más eficiente el flujo de trabajo. Por otra parte, tenemos un sistema de impresión de laser seca que proporciona una calidad excepcional de imagen.<br><br>Contamos a su vez, con Equipo intraoral TXD tijera y digitalizador de imagen.</p>
         </div>
       </div>
     </div>
   </div>
-
+  <!-- Especialidades Section ===========================================-->
+  <div id="about-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h4>En Radiología Dental realizamos los siguientes estudios:</h4>
+          <br>
+          <div class="col-md-6">
+            <h3><i class="fa fa-check"></i> Panorámica</h3>
+            <h3><i class="fa fa-check"></i> Panorámica Segmentada</h3>
+            <h3><i class="fa fa-check"></i> Seriada Completa</h3>
+            <h3><i class="fa fa-check"></i> Seriada Maxilar Superior</h3>
+          </div>
+          <div class="col-md-6">
+            <h3><i class="fa fa-check"></i> Seriada Maxilar Inferior</h3>
+            <h3><i class="fa fa-check"></i> ATM (Articulación Temporo Mandibular)</h3>
+            <h3><i class="fa fa-check"></i> Fotos clínicas para Ortondocia</h3>
+          </div>           
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Contact Section ================================================================-->
   <div id="contact-section">
@@ -115,7 +136,7 @@
       <div class="row">
         <div class="col-md-4">
           <h5>Horarios de Atención:</h5>
-          <p>Lunes a Viernes: 8:30 a 13:00 hs - 15:30 a 19:30hs</p>
+          <p>Lunes a Viernes: 09:00 a 13:00 hs - 15:30 a 19:30hs</p>
           <p>Sábados: 9:00 a 13:00hs</p>
         </div>      
         <div class="col-md-4">
